--- a/.env.travis
+++ b/.env.travis
@@ -2,6 +2,8 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=testing
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_TEST_DATABASE=homestead_test
 DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
