--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,16 @@ before_script:
   - chmod 777 -R storage
   - cp .env.travis .env
   - composer self-update
-  - composer install --no-interaction
+  - composer install --no-interaction --dev
   - php artisan key:generate
-  - mysql -e 'create database homestead_test;'
   - php artisan migrate
   - pear install pear/PHP_CodeSniffer
   - phpenv rehash
   - npm install
   - npm run dev
+
+before_install:
+  - mysql -e 'create database homestead_test;'
 
 script:
   - vendor/bin/phpunit --coverage-text
