--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
   - phpenv rehash
   - npm install
   - npm run dev
+  - php artisan optimize
 
 before_install:
   - mysql -e 'create database homestead_test;'
