--- a/.env.travis
+++ b/.env.travis
@@ -1,13 +1,22 @@
-APP_ENV=testing
-APP_KEY=SomeRandomString
+APP_NAME=Keex
+APP_ENV=local
+APP_KEY=
+APP_DEBUG=true
 
-DB_CONNECTION=testing
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
+
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_TEST_DATABASE=homestead_test
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=
+DB_DATABASE=keex
+DB_USERNAME=root
+DB_PASSWORD=
 
-CACHE_DRIVER=array
-SESSION_DRIVER=array
-QUEUE_DRIVER=sync
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DRIVER=local
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=database
+SESSION_LIFETIME=120
+
