--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ before_script:
   - php artisan migrate
   - pear install pear/PHP_CodeSniffer
   - phpenv rehash
+  - rm -rf node_modules
+  - rm package-lock.json yarn.lock
+  - npm cache clear --force
   - npm install
   - npm run dev
 
