--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - pear install pear/PHP_CodeSniffer
   - phpenv rehash
   - rm -rf node_modules
-  - rm package-lock.json yarn.lock
+  - rm package-lock.json
   - npm cache clear --force
   - npm install
   - npm run dev
