--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_script:
   - rm -rf node_modules
   - rm package-lock.json
   - npm cache clear --force
+  - npm cache clean –f
+  - npm install -g n
   - npm install
   - npm run dev
 
