--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - chmod 777 -R storage
   - cp .env.travis .env
   - composer self-update
-  - composer install --no-interaction --dev
+  - composer install --no-interaction
   - php artisan key:generate
   - php artisan optimize
   - php artisan migrate
