--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: php
 
+dist: bionic
+
 php:
   - 7.4
   #- 8.1
-
-os: linux
 
 services:
   - mysql
@@ -12,27 +12,28 @@ services:
 before_script:
   - chmod 777 -R storage
   - cp .env.travis .env
+  - mysql -e 'create database keex'
   - composer self-update
-  - composer install
+  - composer install --no-interaction --prefer-source
   - php artisan key:generate
-  - php artisan optimize
+  #- php artisan optimize
   - php artisan migrate
-  - pear install pear/PHP_CodeSniffer
-  - phpenv rehash
+  #- pear install pear/PHP_CodeSniffer
+  #- phpenv rehash
   #- rm -rf node_modules
   #- rm package-lock.json
-  - npm cache clear --force
-  - npm install
-  - npm run dev
+  #- npm cache clear --force
+  #- npm install
+  #- npm run dev
 
-before_install:
-  - mysql -e 'create database keex;'
-  #- nvm install node
-  #- node
+#before_install:
+#- mysql -e 'create database keex;'
+#- nvm install node
+#- node
 
 script:
-  - vendor/bin/phpunit --coverage-text
-  - npm run production
+  - vendor/bin/phpunit
+  #- npm run production
 
 cache:
   directories:
