--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "laraveles/spanish": "^1.5",
         "livewire/livewire": "^2.5"
     },
     "require-dev": {
