--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "laraveles/spanish": "^1.5",
-        "livewire/livewire": "^2.5"
+        "livewire/livewire": "^2.5",
+        "renatomarinho/laravel-page-speed": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
