--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source
   - php artisan key:generate
-  - php artisan migrate
+  - php artisan migrate:fresh --seed
 
 cache:
   directories:
