--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-language: php
+os:
+  - linux
 
-dist: bionic
+language: php
 
 php:
   - 7.4
@@ -17,6 +18,8 @@ before_script:
   - composer install --no-interaction --prefer-source
   - php artisan key:generate
   - php artisan migrate:fresh --seed
+  - npm install
+  - npm run dev
 
 cache:
   directories:
