--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source
   - php artisan key:generate
+  - php artisan storage:link
   - php artisan migrate:fresh --seed
   - npm install
   - npm run dev
