--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - composer install --no-interaction --prefer-source
   - php artisan key:generate
   - php artisan storage:link
-  - php artisan migrate:fresh --seed
+  #- php artisan migrate:fresh --seed
   - npm install
   - npm run dev
 
