--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "nunomaduro/collision": "^5.0"
+        //"phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +38,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+           // "Tests\\": "tests/"
         }
     },
     "scripts": {
