--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 #MercadoPago
 MERCADOPAGO_PUBLIC_KEY=
 MERCADOPAGO_ACCESS_TOKEN=
+
+#PayPäl
+PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+
