--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=keex
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://keex.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
