--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "artesaos/seotools": "^0.22.0",
         "bumbummen99/shoppingcart": "^4.0",
         "fakerphp/faker": "^1.9.1",
         "fideloper/proxy": "^4.4",
