--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Pal Perro",
-    "short_name": "LPT",
+    "short_name": "PalPerroShop",
     "start_url": "/index.php",
     "background_color": "#6777ef",
     "description": "Pal Perro Ecommerce",
