--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,12 @@
         "spatie/laravel-sitemap": "^6.1"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "smknstd/fakerphp-picsum-images": "^1.0",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
